--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,6 @@
 {
     "name": "Minecraft Plugin Development",
-    "image": "mcr.microsoft.com/devcontainers/java:21",
-    "dockerComposeFile": "docker-compose.yml",
+    "dockerComposeFile": "../docker-compose.yml",
     "service": "dev",
     "workspaceFolder": "/workspace",
     "customizations": {
