--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,14 +12,12 @@ services:
     build:
       context: .
       dockerfile: ./paper/Dockerfile
-    container_name: mc-plugin-paper
+      target: runtime
     ports:
       - "25565:25565"
     volumes:
-      - ./target:/server/plugins
       - paper_data:/server
-    depends_on:
-      - dev
+      - ./target:/server/plugins
 
 volumes:
   paper_data:
